--- a/README.org
+++ b/README.org
@@ -108,6 +108,7 @@ Each folder will have a structure something like this:
 /predictions/input_file_name.vcf
 ├── all-predictions.csv
 ├── all-preds.png
+├── confusion-matrices.csv
 ├── hpo-descriptions.csv
 ├── model-scores.csv
 ├── top-50-preds.png└
@@ -119,7 +120,9 @@ Each folder will have a structure something like this:
 starting with the Ensemble Gene ID and the gene name, and then after giving the
 variant itself (in terms of the chromosome, location, ref and alt) each
 subsequent "HP:XXXXXXX" column gives the predictions from the model build for
-that HPO term.
+that HPO term. A counterpart to this is =confusion-matrices.csv=, which provides
+confusion matrices for each prediction, using it's score as a threshold applied
+to the OOB predictions.
 
 Each model used has an associated self-evaluation score from the bootstrapped
 test/train process, these scores are given in =model-scores.csv=. The variable
